--- a/javascript/Vue实践相关/Vue 实现无限加载 navMenu 组件.html
+++ b/javascript/Vue实践相关/Vue 实现无限加载 navMenu 组件.html
@@ -48,6 +48,16 @@
   <script>
     Vue.component('menu-nav', {
       template: '#menu-nav',
+      created () {
+        // 根据传入 id 默认高亮
+        if (this.selectedIds && this.selectedIds.length > 0) {
+          this.menuData.forEach(menu => {
+            if (this.selectedIds.includes(menu.id)) {
+              this.selectedItem = menu
+            }
+          })
+        }
+      },
       props: {
         menuData: {
           type: Array,
@@ -62,6 +72,10 @@
           default: 0
         },
         selectedIds: {
+          type: Array,
+          default: () => []
+        },
+        selectedItems: {
           type: Array,
           default: () => []
         }
@@ -108,11 +122,15 @@
             if (oldItem && oldItem.id) {
               const index = this.selectedIds.findIndex(child => child === oldItem.id)
               index !== -1 && this.selectedIds.splice(index, 1)
+              const itemIndex = this.selectedItems.findIndex(child => child.id === oldItem.id)
+              itemIndex !== -1 && this.selectedItems.splice(itemIndex, 1)
             }
             // 推入新项
             if (item && item.id) {
               const index = this.selectedIds.findIndex(child => child === item.id)
               index === -1 && this.selectedIds.push(item.id)
+              const itemIndex = this.selectedItems.findIndex(child => child.id === item.id)
+              itemIndex === -1 && this.selectedItems.push(item)
             }
           } else {
             this.$emit('select-menu', {item, oldItem})
@@ -125,7 +143,12 @@
   <p>相当于一个横向的无限 menu 组件</p>
   <p>参考链接：[如何实现无限递归组件]<a href="https://mp.weixin.qq.com/s/KVK7jy_w5pk0eES_5WUz-A" target="_blank">(https://mp.weixin.qq.com/s/KVK7jy_w5pk0eES_5WUz-A)</a></p>
   <div id="app">
-    <menu-nav :selected-ids.sync="selectedIds" :menu-data="menuData" :menu-depth-style-list="menuDepthStyleList"></menu-nav>
+    <menu-nav
+      :selected-ids.sync="selectedIds"
+      :selected-items.sync="selectedItems"
+      :menu-data="menuData"
+      :menu-depth-style-list="menuDepthStyleList">
+    </menu-nav>
   </div>
 
   <script>
@@ -133,8 +156,9 @@
       el: '#app',
       data () {
         return {
+          selectedIds: [1, 2, 3],
+          selectedItems: [],
           // 定制每个层级 wrapper 的样式
-          selectedIds: [],
           menuDepthStyleList: [
             'background: lightcyan;',
             'background: lightgoldenrodyellow;'
