--- a/javascript/实现大文件断点续传/src/index.html
+++ b/javascript/实现大文件断点续传/src/index.html
@@ -16,6 +16,7 @@
   <p>参考资料：</p>
   <ul>
     <li><a href="https://github.com/xbc30/large-file-upload#nodejs%E5%A4%A7%E6%96%87%E4%BB%B6%E5%88%86%E7%89%87%E4%B8%8A%E4%BC%A0%E6%96%AD%E7%82%B9%E7%BB%AD%E4%BC%A0httpwebsocket" target="_blank">[Nodejs大文件分片上传、断点续传(HTTP/WebSocket)]</a></li>
+    <li><a href="https://github.com/xbc30/large-file-upload/blob/master/client/src/components/upload.vue" target="_blank">[upload 组件]</a></li>
   </ul>
   <div>
     <div
@@ -204,15 +205,21 @@
         await Promise.all(chunkUploadReqs.map(fn => fn()))
         console.log('并行上传完毕～')
       }
-      await postChunkMerge()
+      await postChunkMerge({ md5, chunkTotal, file })
       return 1
     }
 
-    async function postChunkMerge () {
+    async function postChunkMerge ({ md5, chunkTotal, file }) {
       // TODO: 请求文件合并
+      console.log(file)
       await myAjax({
         url: '/mergeChunks',
-        data: JSON.stringify({}),
+        data: JSON.stringify({
+          md5,
+          chunkTotal,
+          chunkSize: file.size,
+          fileName: file.name
+        }),
         method: 'POST',
         onUploadProgress: (e) => {
           updateProgress(0, true)
