--- a/css/吸顶效果.html
+++ b/css/吸顶效果.html
@@ -35,6 +35,7 @@
   <div>
     <div style="height: 50%;">content</div>
     <p>参考资料：<a href="https://juejin.cn/post/6844903815041269774">5 种滚动吸顶实现方式的比较</a></p>
+    <p>综合来看，其实只有以下两种是比较实用，覆盖面比较广的</p>
     <p style="position: sticky; top: 0; background-color: aqua;">方式一，sticky</p>
 
     <!-- 用一个等高的父元素将元素包裹起来可以防止页面在吸顶的时候由于 fixed 元素脱离文档流而闪烁，还有可能会导致下面的内容被挡住 -->
